compiz (1:0.9.11-0ubuntu1) UNRELEASED; urgency=low

  * Bump version to 0.9.11

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Wed, 23 Oct 2013 08:17:03 +0300

compiz (1:0.9.10+13.10.20131011-0ubuntu1) saucy; urgency=low

  [ Chris Townsend ]
  * Remove seemingly useless code in the SnapWindow::resizeNotify()
    method where a snapped window that is being resized on the opposite
    side of the snap would cause orders of magnitude more calls to
    window->resize() and kill performance. (LP: #1019139)

  [ Marco Trevisan (Treviño) ]
  * debian/patches/ubuntu-config.patch: Don't use Ctrl+Alt+KP_0 for grid
    maximize Otherwise this clashes with default minimize key. (LP:
    #1236899)

  [ Ubuntu daily release ]
  * Automatic snapshot from revision 3795

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Fri, 11 Oct 2013 06:16:27 +0000

compiz (1:0.9.10+13.10.20131004-0ubuntu1) saucy; urgency=low

  [ Chris Townsend ]
  * Fix issue where non-resizable windows and semi-maximized window
    would have an area near the top of the title bar that could not be
    grabbed. (LP: #1228507)

  [ Marco Trevisan (Treviño) ]
  * ActionMenu: weak ref the action menu on creation, and unref it on
    destroy Also, now the widget destruction automatically unset the
    menu. This makes the object to be correctly finalized (not only
    disposed) making sure the internal idle into WnckActionMenu gets
    stopped. (LP: #1191853)

  [ Ubuntu daily release ]
  * Automatic snapshot from revision 3794

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Fri, 04 Oct 2013 05:23:02 +0000

compiz (1:0.9.10+13.10.20130927.1-0ubuntu1) saucy; urgency=low

  [ Chris Townsend ]
  * Fix regression when selecting apps on a different viewport than the
    current one will no longer automatically switch the viewport. (LP:
    #1228352)

  [ Ubuntu daily release ]
  * Automatic snapshot from revision 3791
